$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-01-15 [B] Fixed keywords dupes in keyword manager (thread ID 63228) {eenemeenemuu}
2010-01-13 [B] Better check if we currently look at a full sized picture or an intermediate sized picture (thread ID 63184) {eenemeenemuu}
2010-01-13 [C] Display full size register notice only if registration of new users is enabled (thread ID 63184) {Timo}
2010-01-11 [C] Better behaviour of 'Add your comment' name field. Click deletes the default text. {Timo}
2010-01-08 [C] Adjusted rowspan in edit_one_pic.php {eenemeenemuu}
2010-01-08 [D] Small documentation improvements (web dev toolbar usage, collapsible tools recommendation list, typo fixed, class added to pre-tags) {GauGau}
2010-01-08 [B] Fixed issue with admin username during install (thread ID 63135) {eenemeenemuu}
2010-01-07 [D] Added database section to plugin documentation {GauGau}
2010-01-05 [C] Removed class 'image' from spacer {eenemeenemuu}
2010-01-05 [B] Fixed template error with certain settings for comments and smileys (thread ID 62835) {eenemeenemuu}
2010-01-05 [B] Fixed display of rating stars after vote {eenemeenemuu}
2010-01-04 [D] Minor improvements of docs {GauGau}
2010-01-02 [M] Updated header information to reflect new year {GauGau}
2009-12-30 [B] Added missing anchor attributes to themes which override the menus {Nibbler}
2009-12-29 [D] Undid the syntax highlighting changes from 2009-01-02 and added a section in the coding guidelines page about it {GauGau}
2009-12-29 [D] Added usability section to coding guidelines {GauGau}
2009-12-27 [M] Counted version number up for onlinestats from 2.3 to 2.4 {GauGau}